feat: page and search lists server-side, and remove the network N+1
Every list endpoint returned an unbounded findAll(). A clinic with ten
thousand patients would have sent all of them to fill one screen, and the
frontend then filtered the whole array in the browser.

Lists are now paged and searched in the database. The response carries the
metadata a client needs, declared explicitly rather than leaning on Spring's
Page serialisation, which is unstable and warns about it. Search is one
free-text term matched against the fields somebody would actually type: name,
email or phone for patients, name, specialty or email for doctors.

The bigger fix is the enrichment loop. Listing appointments called
patient-service and doctor-service once per row, so a page of twenty
appointments meant forty remote calls. It now collects the distinct ids and
asks each service once, which is two calls regardless of page size. Measured
against the running stack: three list calls produced three batch fetches where
the previous code would have made forty-five.

Adding a batch endpoint opened a hole worth naming. The gateway allows PATIENT
on GET /patients/** so that a patient can read their own record, which would
have let them call /patients/batch?ids=1,2,3 and read everyone. Both the batch
endpoint and the full list now require a staff role, and only the single-record
route stays open to patients.

On the frontend, searching is debounced so typing does not fire a request per
keystroke, the previous page stays visible while the next loads rather than
collapsing to a spinner, and dropdowns use a separate capped options query,
since a select box with thousands of entries is the wrong control anyway.

Verified: paging boundaries including a page past the end, search matching,
batch enrichment with names still resolving, and 403 for a patient on both
list routes.